# hermes-desktop-rust

./: .gitignore  LICENSE  README.md  electron-builder.yml  package-lock.json  package.json  release.sh
.github/workflows/: build.yml
native/: Cargo.toml  package-lock.json  package.json
native/src/: common.rs  config.rs  hermes.rs  kanban.rs  lib.rs  models.rs  profiles.rs  sessions.rs  sse.rs  ssh_tunnel.rs
src-shared/i18n/locales/en/: chat.ts
src-shared/i18n/locales/es/: install.ts
src-shared/i18n/locales/id/: providers.ts
src-shared/i18n/locales/ja/: common.ts
src-shared/i18n/locales/pt-BR/: providers.ts
src-shared/i18n/locales/pt-PT/: constants.ts  install.ts  providers.ts
src-shared/i18n/locales/zh-CN/: common.ts  providers.ts
src-shared/i18n/locales/zh-TW/: chat.ts  install.ts
src/main/: config.ts  hermes-auth.ts  hermes.ts  index.ts  installer.ts  model-discovery.ts  session-cache.ts  sessions.ts  skills.ts  ssh-remote.ts  tools.ts  updater-log.ts  utils.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: constants.ts
src/renderer/src/assets/: base.css
src/renderer/src/components/: AgentMarkdown.tsx  OAuthLoginModal.tsx
src/renderer/src/hooks/: useDiscoveredModels.ts
src/renderer/src/screens/Chat/: Chat.tsx  ChatHeader.tsx  ChatInput.tsx  HistoryRow.tsx  MessageList.tsx  sessionHistory.ts  transcriptUtils.test.ts  types.ts
src/renderer/src/screens/Install/: Install.tsx
src/renderer/src/screens/Kanban/: Kanban.test.tsx  Kanban.tsx
src/renderer/src/screens/Layout/: Layout.tsx
(+30 files in other folders)
